terraform/kubernetes/flaskr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskr
  template:
    metadata:
      labels:
        app: flaskr
    spec:
      containers:
        - name: flaskr
          image: tarquin2001/final_flaskr:flaskr
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: flaskr-service
spec:
  type: LoadBalancer
  selector:
    app: flaskr
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 31000
