terraform/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskr-ingress
spec:
  rules:
    - host: app.flaskr1234.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaskr-service
                port:
                  number: 5000
